AddToCart: fixing display on small mobile issues

--- a/src/app/modules/search/components/add-to-cart/add-to-cart.dialog.scss
+++ b/src/app/modules/search/components/add-to-cart/add-to-cart.dialog.scss
@@ -4,7 +4,7 @@
 @import "breakpoints";
 
 .slot-info {
-  padding: 9px 24px;
+  padding-bottom: 30px;
 
   display: flex;
   flex-direction: row;
